--- a/omniNotes/build.gradle
+++ b/omniNotes/build.gradle
@@ -2,7 +2,7 @@
  * Copyright (C) 2018 Federico Iosue (federico.iosue@gmail.com)
  *
  * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
+ * it under the terms of the GNU General Public Lbicense as published by
  * the Free Software Foundation, either version 3 of the License, or
  * (at your option) any later version.
  *
@@ -16,7 +16,7 @@
  */
 
 apply plugin: 'com.android.application'
-apply plugin: 'me.tatarka.retrolambda'
+
 
 android {
 
@@ -34,7 +34,7 @@ android {
         }
     }
 
-    compileSdkVersion Integer.parseInt(project.TARGET_SDK)
+    compileSdkVersion 25
     buildToolsVersion project.BUILD_TOOLS
 
     defaultConfig {
@@ -84,7 +84,7 @@ android {
         }
         foss {
             dimension "standard"
-            applicationId project.PACKAGE + ".foss"
+            applicationId project.PACKAGE + ".app"
         }
     }
 
@@ -100,87 +100,82 @@ android {
 }
 
 dependencies {
-    testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-all:1.9.5'
-    testCompile 'org.powermock:powermock:1.6.5'
-    testCompile 'org.powermock:powermock-module-junit4:1.6.5'
-    testCompile 'org.powermock:powermock-api-mockito:1.6.5'
-
-    androidTestCompile 'com.android.support.test:runner:0.5'
-    androidTestCompile 'com.android.support.test:rules:0.5'
-    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
-
-    compile fileTree(include: '*.jar', dir: 'libs')
-    compile 'com.github.flavienlaurent.datetimepicker:library:0.0.2'
-    compile 'com.larswerkman:HoloColorPicker:1.4'
-    compile 'com.jakewharton:disklrucache:2.0.2'
-    compile 'de.keyboardsurfer.android.widget:crouton:1.8.4@aar'
-    compile 'com.google.android.apps.dashclock:dashclock-api:2.0.0'
-    compile('ch.acra:acra:4.8.5') {
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-all:1.9.5'
+    testImplementation 'org.powermock:powermock:1.6.5'
+    testImplementation 'org.powermock:powermock-module-junit4:1.6.5'
+    testImplementation 'org.powermock:powermock-api-mockito:1.6.5'
+    androidTestImplementation 'com.android.support.test:runner:0.5'
+    androidTestImplementation 'com.android.support.test:rules:0.5'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
+    implementation fileTree(include: '*.jar', dir: 'libs')
+    implementation 'com.github.flavienlaurent.datetimepicker:library:0.0.2'
+    implementation 'com.larswerkman:HoloColorPicker:1.4'
+    implementation 'com.jakewharton:disklrucache:2.0.2'
+    implementation 'com.google.android.gms:play-services-ads:10.0.0'
+    implementation 'de.keyboardsurfer.android.widget:crouton:1.8.4@aar'
+    implementation 'com.google.android.apps.dashclock:dashclock-api:2.0.0'
+    implementation('ch.acra:acra:4.8.5') {
         exclude group: 'org.json'
     }
-    compile 'com.github.gabrielemariotti.changeloglib:changelog:2.0.0'
-    compile 'be.billington.calendar.recurrencepicker:library:1.1.1'
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:design:23.4.0'
-    compile 'com.android.support:multidex:1.0.1'
-    compile 'de.greenrobot:eventbus:2.4.0'
-    compile 'com.pushbullet:android-extensions:1.0.4@aar'
-    compile 'com.getbase:floatingactionbutton:1.10.1'
-    compile 'com.nhaarman.listviewanimations:lib-core:3.1.0@aar'
-    compile 'com.nhaarman.listviewanimations:lib-manipulation:3.1.0@aar'
-    compile 'com.github.bumptech.glide:glide:3.6.1'
-    compile('com.github.afollestad.material-dialogs:core:0.8.5.6@aar') {
+    implementation 'com.github.gabrielemariotti.changeloglib:changelog:2.0.0'
+    implementation 'be.billington.calendar.recurrencepicker:library:1.1.1'
+    implementation 'com.android.support:appcompat-v7:25.0.0'
+    implementation 'com.android.support:design:25.0.0'
+    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'de.greenrobot:eventbus:2.4.0'
+    implementation 'com.pushbullet:android-extensions:1.0.4@aar'
+    implementation 'com.getbase:floatingactionbutton:1.10.1'
+    implementation 'com.nhaarman.listviewanimations:lib-core:3.1.0@aar'
+    implementation 'com.nhaarman.listviewanimations:lib-manipulation:3.1.0@aar'
+    implementation 'com.github.bumptech.glide:glide:3.6.1'
+    implementation('com.github.afollestad.material-dialogs:core:0.8.5.6@aar') {
         transitive = true
     }
-    compile('com.github.afollestad.material-dialogs:commons:0.8.5.6@aar') {
+    implementation('com.github.afollestad.material-dialogs:commons:0.8.5.6@aar') {
         transitive = true
     }
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
-    compile ('com.jakewharton:butterknife:8.5.1'){
+    implementation('com.jakewharton:butterknife:8.5.1') {
         exclude group: 'com.android.support'
     }
-    compile('org.mnode.ical4j:ical4j:1.0.6') {
+    implementation('org.mnode.ical4j:ical4j:1.0.6') {
         exclude group: 'commons.io'
     }
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
-    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
-    compile 'com.pnikosis:materialish-progress:1.5'
-    compile 'com.github.paolorotolo:appintro:1.3.0'
-    compile 'io.reactivex:rxandroid:1.0.1'
-    compile 'io.reactivex:rxjava:1.0.14'
-    compile 'com.artemzin.rxjava:proguard-rules:1.0.14.2'
-    compile 'com.tbruyelle.rxpermissions:rxpermissions:0.4.2@aar'
-    compile 'org.ocpsoft.prettytime:prettytime:3.2.7.Final'
-
-    compile ('com.github.federicoiosue:SimpleGallery:2.0.0') {
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5'
+    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    testImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    implementation 'com.pnikosis:materialish-progress:1.5'
+    implementation 'com.github.paolorotolo:appintro:1.3.0'
+    implementation 'io.reactivex:rxandroid:1.0.1'
+    implementation 'io.reactivex:rxjava:1.0.14'
+    implementation 'com.artemzin.rxjava:proguard-rules:1.0.14.2'
+    implementation 'com.tbruyelle.rxpermissions:rxpermissions:0.4.2@aar'
+    implementation 'org.ocpsoft.prettytime:prettytime:3.2.7.Final'
+    implementation('com.github.federicoiosue:SimpleGallery:2.0.0') {
         exclude group: 'com.android.support'
     }
-    compile 'com.github.federicoiosue:Springpad-Importer:1.0.1'
-    compile 'com.github.federicoiosue:Omni-Notes-Commons:1.2.0'
-    compile ('com.github.federicoiosue:checklistview:3.2.1') {
-        transitive=false
+    implementation 'com.github.federicoiosue:Springpad-Importer:1.0.1'
+    implementation 'com.github.federicoiosue:Omni-Notes-Commons:1.2.0'
+    implementation('com.github.federicoiosue:checklistview:3.2.1') {
+        transitive = false
     }
-    compile 'com.github.federicoiosue:pixlui:2.6'
-
+    implementation 'com.github.federicoiosue:pixlui:2.6'
     // Flavors specific dependecies
-    playCompile 'io.nlopez.smartlocation:library:3.2.4'
-    fossCompile 'com.github.federicoiosue:smart-location-lib:3.2.5'
-
-    playCompile ('com.github.federicoiosue:analitica:0.0.3:googleAnalyticsRelease@aar'){
-        transitive=true
+    playImplementation 'io.nlopez.smartlocation:library:3.2.4'
+    fossImplementation 'com.github.federicoiosue:smart-location-lib:3.2.5'
+    playImplementation('com.github.federicoiosue:analitica:0.0.3:googleAnalyticsRelease@aar') {
+        transitive = true
     }
-    fossCompile ('com.github.federicoiosue:analitica:0.0.3:piwikRelease@aar'){
-        transitive=true
+    fossImplementation('com.github.federicoiosue:analitica:0.0.3:piwikRelease@aar') {
+        transitive = true
     }
-    playCompile 'com.google.android.gms:play-services-analytics:9.0.2'
-    fossCompile ('org.piwik.sdk:piwik-sdk:1.0.2'){
+    playImplementation 'com.google.android.gms:play-services-analytics:9.0.2'
+    fossImplementation('org.piwik.sdk:piwik-sdk:1.0.2') {
         exclude group: 'com.jakewharton.timber', module: 'timber'
     }
-    fossCompile 'com.jakewharton.timber:timber:4.5.1'
-
-    testCompile 'junit:junit:4.12'
+    fossImplementation 'com.jakewharton.timber:timber:4.5.1'
+    testImplementation 'junit:junit:4.12'
 }
 
 configurations.all {
@@ -189,7 +184,7 @@ configurations.all {
 }
 
 android.productFlavors.each { flavor ->
-    String analyticsUrl = flavor.name == 'foss' && ANALYTICS_PARAMS_FOSS?.trim() ? ANALYTICS_PARAMS_FOSS : ANALYTICS_PARAMS
+    String analyticsUrl = flavor.name == 'app' && ANALYTICS_PARAMS_FOSS?.trim() ? ANALYTICS_PARAMS_FOSS : ANALYTICS_PARAMS
     flavor.buildConfigField 'String', 'ANALYTICS_PARAMS', '"' + analyticsUrl + '"'
     flavor.buildConfigField 'String', 'CRASH_REPORTING_URL', '"' + CRASH_REPORTING_URL + '"'
     flavor.buildConfigField 'String', 'VERSION_CHECK_URL', '"' + VERSION_CHECK_URL + '"'
